--- a/index.html
+++ b/index.html
@@ -42,5 +42,11 @@
    </div>
    <p>priyanka</p>
    <a href="www.google.com">d</a>
+   <div class="flex">
+    <div class="flex1">1</div>
+    <div class="flex1">2</div>
+    <div class="flex1">3</div>
+    <div class="flex1">4</div>
+   </div>
 </body>
 </html>
