--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
     <div class="flex1">3</div>
     <div class="flex1">4</div>
    </div>
+   <div class="grid">
+    <div class="grid1"></div>
+    <div class="gird1"></div>
+    <div class="gird1"></div>
+    <div class="gird1"></div>
+    <div class="gird1"></div>
+   </div>
 </body>
 </html>
