--- a/index.html
+++ b/index.html
@@ -55,5 +55,12 @@
     <div class="gird1"></div>
     <div class="gird1"></div>
    </div>
+   <div mm="hello">
+  hello
+   </div>
+   <script>
+    let a=document.querySelector("[mm='hello']")
+    console.log(a.textContent)
+   </script>
 </body>
 </html>
