added transtion and animation

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
    <div class="container">
     <div class="box translate"></div>
 </div>
+<div class="transform"></div>
    <script>
     let a=document.querySelector("[mm='hello']")
     console.log(a.textContent)
